Implementación Slotted-1-persistan terminada, con un pequeño cambio en WSM y BSM en Veins

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -46,7 +46,7 @@ sim-time-limit = 100s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
-*.manager.launchConfig = xmldoc("cross.launchd.xml")
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 
 # Número de Vehiculos
 #*.manager.numVehicles = 2000
@@ -109,9 +109,9 @@ sim-time-limit = 100s
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
-*.node[*0].veinsmobility.accidentCount = 1
-*.node[*0].veinsmobility.accidentStart = 75s
-*.node[*0].veinsmobility.accidentDuration = 50s
+*.node[0].veinsmobility.accidentCount = 1
+*.node[0].veinsmobility.accidentStart = 20s
+*.node[0].veinsmobility.accidentDuration = 50s
 
 [Config WithoutChannelSwitching]
 
