confección de 2 escnarios sin RSU

--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -15,7 +15,7 @@ network = Scenario1
 debug-on-errors = true
 print-undisposed = false
 
-sim-time-limit = 100s
+sim-time-limit = 500s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -46,7 +46,7 @@ sim-time-limit = 100s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
-*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.manager.launchConfig = xmldoc("mycross.launchd.xml")
 
 # Número de Vehiculos
 #*.manager.numVehicles = 2000
@@ -62,7 +62,7 @@ sim-time-limit = 100s
 
 *.rsu[*].applType = "TraCIDemoRSU11p"
 *.rsu[*].appl.headerLength = 80 bit
-*.rsu[*].appl.sendBeacons = true
+*.rsu[*].appl.sendBeacons = false
 *.rsu[*].appl.dataOnSch = false
 *.rsu[*].appl.beaconInterval = 0.1s
 *.rsu[*].appl.beaconUserPriority = 7
@@ -109,7 +109,7 @@ sim-time-limit = 100s
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
-*.node[0].veinsmobility.accidentCount = 1
+*.node[0].veinsmobility.accidentCount = 0
 *.node[0].veinsmobility.accidentStart = 20s
 *.node[0].veinsmobility.accidentDuration = 50s
 
