--- a/src/networks/scenario2/omnetpp.ini
+++ b/src/networks/scenario2/omnetpp.ini
@@ -1,2 +1,128 @@
 [General]
+cmdenv-express-mode = true
+cmdenv-autoflush = true
+cmdenv-status-frequency = 1s
+**.cmdenv-log-level = info
 
+ned-path = . 
+image-path = ../../images
+
+network = Scenario2
+
+##########################################################
+#            Simulation parameters                       #
+##########################################################
+debug-on-errors = true
+print-undisposed = false
+
+sim-time-limit = 500s
+
+**.scalar-recording = true
+**.vector-recording = true
+
+**.debug = false
+**.coreDebug = false
+
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
+
+
+##########################################################
+# Annotation parameters                                  #
+##########################################################
+*.annotations.draw = true
+
+##########################################################
+# Obstacle parameters                                    #
+##########################################################
+*.obstacles.debug = false
+#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+
+##########################################################
+#            TraCIScenarioManager parameters             #
+##########################################################
+*.manager.updateInterval = 1s
+*.manager.host = "localhost"
+*.manager.port = 9999
+*.manager.autoShutdown = true
+*.manager.launchConfig = xmldoc("mycross.launchd.xml")
+
+# Número de Vehiculos
+#*.manager.numVehicles = 2000
+
+##########################################################
+#                       RSU SETTINGS                     #
+#                                                        #
+#                                                        #
+##########################################################
+*.rsu[0].mobility.x = 500
+*.rsu[0].mobility.y = 500
+*.rsu[0].mobility.z = 3
+
+*.rsu[*].applType = "TraCIDemoRSU11p"
+*.rsu[*].appl.headerLength = 80 bit
+*.rsu[*].appl.sendBeacons = false
+*.rsu[*].appl.dataOnSch = false
+*.rsu[*].appl.beaconInterval = 0.1s
+*.rsu[*].appl.beaconUserPriority = 7
+*.rsu[*].appl.dataUserPriority = 5
+
+##########################################################
+#            11p specific parameters                     #
+#                                                        #
+#                    NIC-Settings                        #
+##########################################################
+*.connectionManager.sendDirect = true
+*.connectionManager.maxInterfDist = 2600m
+*.connectionManager.drawMaxIntfDist = false
+
+*.**.nic.mac1609_4.useServiceChannel = false
+
+*.**.nic.mac1609_4.txPower = 20mW
+*.**.nic.mac1609_4.bitrate = 6Mbps
+*.**.nic.phy80211p.sensitivity = -89dBm
+
+*.**.nic.phy80211p.useThermalNoise = true
+*.**.nic.phy80211p.thermalNoise = -110dBm
+
+*.**.nic.phy80211p.decider = xmldoc("config.xml")
+*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic.phy80211p.usePropagationDelay = true
+*.**.nic.phy80211p.collectCollisionStatistics = true
+
+*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+
+##########################################################
+#                    WaveAppLayer                        #
+##########################################################
+*.node[*].applType = "myWaveAppLayer"
+*.node[*].appl.headerLength = 80 bit
+*.node[*].appl.sendBeacons = true
+*.node[*].appl.dataOnSch = false
+*.node[*].appl.beaconInterval = 0.1s
+
+##########################################################
+#                      Mobility                          #
+##########################################################
+*.node[*].veinsmobilityType.debug = true
+*.node[*].veinsmobility.x = 0
+*.node[*].veinsmobility.y = 0
+*.node[*].veinsmobility.z = 1.895
+*.node[0].veinsmobility.accidentCount = 0
+*.node[0].veinsmobility.accidentStart = 20s
+*.node[0].veinsmobility.accidentDuration = 50s
+
+[Config WithoutChannelSwitching]
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 40 
+*.node[*].appl.Slotted_tau = 1.45
+
+
+
+[Config WithChannelSwitching]
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+*.rsu[*].appl.dataOnSch = true
