--- a/src/networks/scenario2/omnetpp.ini
+++ b/src/networks/scenario2/omnetpp.ini
@@ -113,14 +113,20 @@ sim-time-limit = 500s
 *.node[0].veinsmobility.accidentStart = 20s
 *.node[0].veinsmobility.accidentDuration = 50s
 
-[Config WithoutChannelSwitching]
+[Config WithoutChannelSwitching-slotted]
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
 *.node[*].appl.Slotted_R = 40 
 *.node[*].appl.Slotted_tau = 1.45
 
+[Config WithoutChannelSwitching-TrAD]
 
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 5
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
 
 [Config WithChannelSwitching]
 *.**.nic.mac1609_4.useServiceChannel = true
