Solucionando problema de mensajes, no es posible reemplazar la clase WSM, solo falta verificar el funcionamiento de la simulación

--- a/src/Makefile
+++ b/src/Makefile
@@ -38,6 +38,8 @@ OBJS = \
     $O/modules/phy/PhyLayer80211p.o \
     $O/modules/phy/SampledAntenna1D.o \
     $O/modules/phy/SNRThresholdDecider.o \
+    $O/modules/utils/List.o \
+    $O/modules/utils/Nodelist.o \
     $O/modules/messages/BasicSafetyMessage_m.o \
     $O/modules/messages/my_WSM_m.o
 
