--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -47,6 +47,7 @@ sim-time-limit = 500s
 *.manager.port = 9999
 *.manager.autoShutdown = true
 *.manager.launchConfig = xmldoc("mycross.launchd.xml")
+*.manager.roiRects = "20,20-30,30 20,20-30,30"
 
 # Número de Vehiculos
 #*.manager.numVehicles = 2000
@@ -100,7 +101,7 @@ sim-time-limit = 500s
 *.node[*].appl.headerLength = 80 bit
 *.node[*].appl.sendBeacons = true
 *.node[*].appl.dataOnSch = false
-*.node[*].appl.beaconInterval = 0.1s
+*.node[*].appl.beaconInterval = 1s
 
 ##########################################################
 #                      Mobility                          #
@@ -109,18 +110,24 @@ sim-time-limit = 500s
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
-*.node[0].veinsmobility.accidentCount = 0
-*.node[0].veinsmobility.accidentStart = 20s
-*.node[0].veinsmobility.accidentDuration = 50s
+*.node[*0].veinsmobility.accidentCount = 1
+*.node[*0].veinsmobility.accidentStart = 10s
+*.node[*0].veinsmobility.accidentDuration = 50s
 
-[Config WithoutChannelSwitching]
+[Config WithoutChannelSwitching-slotted]
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_Ns = 3
 *.node[*].appl.Slotted_R = 40 
 *.node[*].appl.Slotted_tau = 1.45
 
+[Config WithoutChannelSwitching-TrAD]
 
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 0.005
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
 
 [Config WithChannelSwitching]
 *.**.nic.mac1609_4.useServiceChannel = true
