incluyendo recordscalar delay

--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -15,7 +15,7 @@ network = Scenario1
 debug-on-errors = true
 print-undisposed = false
 
-sim-time-limit = 500s
+sim-time-limit = 150s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -110,9 +110,9 @@ sim-time-limit = 500s
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
-*.node[*0].veinsmobility.accidentCount = 1
-*.node[*0].veinsmobility.accidentStart = 10s
-*.node[*0].veinsmobility.accidentDuration = 50s
+*.node[20].veinsmobility.accidentCount = 1
+*.node[20].veinsmobility.accidentStart = 50s
+*.node[20].veinsmobility.accidentDuration = 50s
 
 [Config WithoutChannelSwitching-slotted]
 
