Corrigiendo valores para DV-cast

--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -15,7 +15,7 @@ network = Scenario1
 debug-on-errors = true
 print-undisposed = false
 
-sim-time-limit = 150s
+sim-time-limit = 40s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -47,7 +47,7 @@ sim-time-limit = 150s
 *.manager.port = 9999
 *.manager.autoShutdown = true
 *.manager.launchConfig = xmldoc("mycross.launchd.xml")
-*.manager.roiRects = "20,20-30,30 20,20-30,30"
+#*.manager.roiRects = "20,20-30,30 20,20-30,30"
 
 # Número de Vehiculos
 #*.manager.numVehicles = 2000
@@ -111,15 +111,15 @@ sim-time-limit = 150s
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
 *.node[20].veinsmobility.accidentCount = 1
-*.node[20].veinsmobility.accidentStart = 50s
-*.node[20].veinsmobility.accidentDuration = 50s
+*.node[20].veinsmobility.accidentStart = 10s
+*.node[20].veinsmobility.accidentDuration = 40s
 
 [Config WithoutChannelSwitching-slotted]
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3
-*.node[*].appl.Slotted_R = 40 
-*.node[*].appl.Slotted_tau = 1.45
+*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_tau = 0.005 #0.32 #1.45
 
 [Config WithoutChannelSwitching-TrAD]
 
