--- a/src/networks/scenario1/stgo/stgo.sumo.cfg
+++ b/src/networks/scenario1/stgo/stgo.sumo.cfg
@@ -16,9 +16,17 @@
     <report>
         <no-step-log value="true"/>
     </report>
-
+	
     <gui_only>
         <start value="true"/>
     </gui_only>
+
+    <output>
+        <save-state.times value="60"/>
+        <save-state.period value="1"/>
+        <save-state.prefix value="State1"/>
+	<save-state.files value="state1"/>
+    </output>
+
 
 </configuration>
