--- a/src/networks/scenario2/omnetpp.ini
+++ b/src/networks/scenario2/omnetpp.ini
@@ -15,7 +15,7 @@ network = Scenario2
 debug-on-errors = true
 print-undisposed = false
 
-sim-time-limit = 150s
+sim-time-limit = 40s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -100,7 +100,7 @@ sim-time-limit = 150s
 *.node[*].appl.headerLength = 80 bit
 *.node[*].appl.sendBeacons = true
 *.node[*].appl.dataOnSch = false
-*.node[*].appl.beaconInterval = 0.1s
+*.node[*].appl.beaconInterval = 1s
 
 ##########################################################
 #                      Mobility                          #
@@ -110,15 +110,15 @@ sim-time-limit = 150s
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
 *.node[40].veinsmobility.accidentCount = 1
-*.node[40].veinsmobility.accidentStart = 50s
-*.node[40].veinsmobility.accidentDuration = 50s
+*.node[40].veinsmobility.accidentStart = 10s
+*.node[40].veinsmobility.accidentDuration = 40s
 
 [Config WithoutChannelSwitching-slotted]
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 40 
-*.node[*].appl.Slotted_tau = 1.45
+*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_tau = 0.005#1.45
 
 [Config WithoutChannelSwitching-TrAD]
 
