--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -111,23 +111,67 @@ sim-time-limit = 40s
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
 *.node[20].veinsmobility.accidentCount = 1
-*.node[20].veinsmobility.accidentStart = 10s
+*.node[20].veinsmobility.accidentStart = 20s
 *.node[20].veinsmobility.accidentDuration = 40s
+*.node[20].appl.Accident_start = 20
 
-[Config WithoutChannelSwitching-slotted]
+[Config WithoutChSw-slotted]
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3
 *.node[*].appl.Slotted_R = 500 #40
 *.node[*].appl.Slotted_tau = 0.005 #0.32 #1.45
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
 
-[Config WithoutChannelSwitching-TrAD]
+
+[Config WithoutChSw-TrAD]
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
 *.node[*].appl.TrAD_R = 366 
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+
+[Config WithoutChSw-WSA-slotted]
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_tau = 0.005#1.45
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.sendWSA = true
+
+[Config WithoutChSw-WSA-TrAD]
+
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 0.005
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.sendWSA = true
+
+[Config WithChSw-slotted]
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_tau = 0.005#1.45
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+[Config WithChSw-TrAD]
+
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 0.005
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
 
 [Config WithChannelSwitching]
 *.**.nic.mac1609_4.useServiceChannel = true
