--- a/src/networks/scenario2/omnetpp.ini
+++ b/src/networks/scenario2/omnetpp.ini
@@ -112,31 +112,31 @@ sim-time-limit = 60s
 *.node[40].veinsmobility.accidentCount = 1
 *.node[40].veinsmobility.accidentStart = 30s
 *.node[40].veinsmobility.accidentDuration = 40s
-*.node[20].appl.Accident_start = 30
+*.node[40].appl.Accident_start = 30
 
-[Config WithoutChSw-slotted]
+[Config WithoutChSw-slotted-NP-10hz]
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_Ns = 7 #5
+*.node[*].appl.Slotted_R = 40 #500 40
 *.node[*].appl.Slotted_tau = 0.005#1.45
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.1s#0.5s ${0.1s,0.5s}
 
 
 [Config WithoutChSw-TrAD]
 
 *.node[*].appl.TrAD = true
-*.node[*].appl.TrAD_ti = 0.005
+*.node[*].appl.TrAD_ti = 0.005  #0.005
 *.node[*].appl.TrAD_alpha = 10 
-*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_Neig = 20 #25
 *.node[*].appl.TrAD_R = 366 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 
-[Config WithoutChSw-WSA-slotted]
+[Config WithoutChSw-WSA-slotted-NP]
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_Ns = 7
+*.node[*].appl.Slotted_R = 40 #500
 *.node[*].appl.Slotted_tau = 0.005#1.45
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
 *.node[*].appl.sendWSA = true
@@ -154,7 +154,7 @@ sim-time-limit = 60s
 [Config WithChSw-slotted]
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_Ns = 7 #5
 *.node[*].appl.Slotted_R = 500 #40
 *.node[*].appl.Slotted_tau = 0.005#1.45
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
