WSM periodico finalizado

--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -133,14 +133,25 @@ sim-time-limit = 40s
 *.node[*].appl.TrAD_R = 366 
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
 
-[Config WithoutChSw-WSA-slotted]
+[Config WithoutChSw-WSA-slotted-PerWSM]
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
 *.node[*].appl.Slotted_R = 500 #40
 *.node[*].appl.Slotted_tau = 0.005#1.45
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
+
+#
 *.node[*].appl.sendWSA = true
+*.node[*].appl.Send_Per_WSM= true
+
+*.node[20].veinsmobility.accidentCount = 1
+*.node[20].veinsmobility.accidentStart = 5s
+*.node[20].veinsmobility.accidentDuration = 15s
+
+*.node[20].appl.Accident_start = 5
+
+sim-time-limit = 10s
 
 [Config WithoutChSw-WSA-TrAD]
 
@@ -151,8 +162,9 @@ sim-time-limit = 40s
 *.node[*].appl.TrAD_R = 366 
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
 *.node[*].appl.sendWSA = true
+*.node[*].appl.Send_Per_WSM= true
 
-[Config WithChSw-slotted]
+[Config WithChSw-slotted-WSMper]
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
@@ -161,6 +173,7 @@ sim-time-limit = 40s
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
+*.node[*].appl.Send_Per_WSM= true
 
 [Config WithChSw-TrAD]
 
