Nuevo escenario en erlangen

--- a/examples/veins/erlangen.sumo.cfg
+++ b/examples/veins/erlangen.sumo.cfg
@@ -19,7 +19,7 @@
     </report>
 
     <gui_only>
-        <start value="true"/>
+        <start value="false"/>
     </gui_only>
 
 </configuration>
