--- a/examples/veins/erlangen2/erlangen2.sumo.cfg
+++ b/examples/veins/erlangen2/erlangen2.sumo.cfg
@@ -3,8 +3,8 @@
 <configuration>
 
     <input>
-      <net-file value="/home/alexis/git/CA_System/examples/veins/erlangen.net.xml"/>
-      <route-files value="/home/alexis/git/CA_System/examples/veins/erlangen2.rou.xml"/>
+      <net-file value="erlangen.net.xml"/>
+      <route-files value="erlangen2.rou.xml"/>
       <additional-files value=""/>
       <junction-files value=""/>
     </input>
