Simulacion con densidades extremas en escenario de stgo

--- a/src/networks/scenario_STGO-1/omnetpp.ini
+++ b/src/networks/scenario_STGO-1/omnetpp.ini
@@ -7,7 +7,7 @@ cmdenv-status-frequency = 1s
 ned-path = . 
 image-path = ../../images
 
-network = Scenario1
+network = Scenario_stg1
 
 ##########################################################
 #            Simulation parameters                       #
