corregiendo lineas en stg1.ned

--- a/src/networks/scenario_stg1/omnetpp.ini
+++ b/src/networks/scenario_stg1/omnetpp.ini
@@ -15,7 +15,7 @@ network = Scenario_stg1
 debug-on-errors = true
 print-undisposed = false
 
-sim-time-limit = 40s
+sim-time-limit = 1000s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -37,7 +37,7 @@ sim-time-limit = 40s
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -46,7 +46,7 @@ sim-time-limit = 40s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
-*.manager.launchConfig = xmldoc("mycross.launchd.xml")
+*.manager.launchConfig = xmldoc("stg1.launchd.xml")
 #*.manager.roiRects = "20,20-30,30 20,20-30,30"
 
 # Número de Vehiculos
@@ -136,7 +136,7 @@ sim-time-limit = 40s
 [Config WithoutChSw-WSA-slotted-PerWSM]
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_Ns = 7 #5
 *.node[*].appl.Slotted_R = 500 #40
 *.node[*].appl.Slotted_tau = 0.005#1.45
 *.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
@@ -145,24 +145,31 @@ sim-time-limit = 40s
 *.node[*].appl.sendWSA = true
 *.node[*].appl.Send_Per_WSM= true
 
-*.node[20].veinsmobility.accidentCount = 1
-*.node[20].veinsmobility.accidentStart = 5s
-*.node[20].veinsmobility.accidentDuration = 15s
+*.node[*].veinsmobility.accidentCount = 1
+*.node[*].veinsmobility.accidentStart = 700s
+*.node[*].veinsmobility.accidentDuration = 200s
 
-*.node[20].appl.Accident_start = 5
+*.node[*].appl.Accident_start = 700
 
-sim-time-limit = 10s
+sim-time-limit = 1000s
 
-[Config WithoutChSw-WSA-TrAD]
+[Config WithoutChSw-WSA-TrAD-PerWSM]
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
 *.node[*].appl.TrAD_R = 366 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.1 #${0.1s,0.5s}
+
 *.node[*].appl.sendWSA = true
 *.node[*].appl.Send_Per_WSM= true
+
+*.node[*].veinsmobility.accidentCount = 1
+*.node[*].veinsmobility.accidentStart = 700s
+*.node[*].veinsmobility.accidentDuration = 200s
+
+*.node[*].appl.Accident_start = 700
 
 [Config WithChSw-slotted-WSMper]
 
