Incluyendo obstaculos a la simulación

--- a/src/networks/scenario_stg1/omnetpp.ini
+++ b/src/networks/scenario_stg1/omnetpp.ini
@@ -46,7 +46,7 @@ sim-time-limit = 1000s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
-*.manager.launchConfig = xmldoc("stg1.launchd.xml")
+*.manager.launchConfig = xmldoc("stgo1.launchd.xml")
 #*.manager.roiRects = "20,20-30,30 20,20-30,30"
 
 # Número de Vehiculos
