--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -37,7 +37,7 @@ sim-time-limit = 100s
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
