--- a/src/networks/scenario_stg1/stgo1.sumo.cfg
+++ b/src/networks/scenario_stg1/stgo1.sumo.cfg
@@ -4,7 +4,7 @@
 
     <input>
         <net-file value="stgo1.net.xml"/>
-        <route-files value="cross1.rou.xml"/>
+        <route-files value="stgo1.rou.xml"/>
         <additional-files value="stgo1.poly.xml"/>
     </input>
 
@@ -19,7 +19,7 @@
     </report>
 
     <gui_only>
-        <start value="false"/>
+        <start value="true"/>
     </gui_only>
 
 </configuration>
