Modificar tiempo de simulación

--- a/src/networks/scenario_stg1/omnetpp.ini
+++ b/src/networks/scenario_stg1/omnetpp.ini
@@ -110,10 +110,10 @@ sim-time-limit = 1000s
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
-*.node[20].veinsmobility.accidentCount = 1
-*.node[20].veinsmobility.accidentStart = 20s
-*.node[20].veinsmobility.accidentDuration = 40s
-*.node[20].appl.Accident_start = 20
+*.node[*].veinsmobility.accidentCount = 1
+*.node[*].veinsmobility.accidentStart = 3s
+*.node[*].veinsmobility.accidentDuration = 20s
+*.node[*].appl.Accident_start = 3
 
 [Config WithoutChSw-slotted]
 
@@ -131,7 +131,8 @@ sim-time-limit = 1000s
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
 *.node[*].appl.TrAD_R = 366 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.1s # ${0.1s,0.5s}
+sim-time-limit = 1000s
 
 [Config WithoutChSw-WSA-slotted-PerWSM]
 
@@ -177,21 +178,43 @@ sim-time-limit = 1000s
 *.node[*].appl.Slotted_Ns = 5
 *.node[*].appl.Slotted_R = 500 #40
 *.node[*].appl.Slotted_tau = 0.005#1.45
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+
+*.node[*].appl.beaconInterval = 0.5s#${0.1s,0.5s}
+
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
+
 *.node[*].appl.Send_Per_WSM= true
 
-[Config WithChSw-TrAD]
+*.node[*].veinsmobility.accidentCount = 1
+*.node[*].veinsmobility.accidentStart = 2s
+*.node[*].veinsmobility.accidentDuration = 3s
+*.node[*].appl.Accident_start = 2
+
+
+sim-time-limit = 5s
+
+[Config WithChSw-TrAD-WSMper]
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
 *.node[*].appl.TrAD_R = 366 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
+*.node[*].appl.Send_Per_WSM= true
+
+*.node[*].veinsmobility.accidentCount = 1
+*.node[*].veinsmobility.accidentStart = 2s
+*.node[*].veinsmobility.accidentDuration = 3s
+*.node[*].appl.Accident_start = 2
+
+
+sim-time-limit = 5s
 
 [Config WithChannelSwitching]
 *.**.nic.mac1609_4.useServiceChannel = true
