Moviendo inicio de beaconing a beaconAtTime, al igual que WSA

--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -171,9 +171,12 @@ sim-time-limit = 10s
 *.node[*].appl.Slotted_R = 500 #40
 *.node[*].appl.Slotted_tau = 0.005#1.45
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
+
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 *.node[*].appl.Send_Per_WSM= true
+
+*.node[*].appl.beaconAtTime = 500s
 
 [Config WithChSw-TrAD]
 
