Cambiando comienzo de simulación a través de un simple comando en .ini

--- a/src/networks/scenario_stg1/omnetpp.ini
+++ b/src/networks/scenario_stg1/omnetpp.ini
@@ -177,22 +177,26 @@ sim-time-limit = 1000s
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
 *.node[*].appl.Slotted_R = 500 #40
-*.node[*].appl.Slotted_tau = 0.005#1.45
+*.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.5s#${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 20s
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
-*.node[*].appl.Send_Per_WSM= true
+*.node[*].appl.Send_Per_WSM = true
+*.node[*].appl.sendWSA = true
 
-*.node[*].veinsmobility.accidentCount = 1
-*.node[*].veinsmobility.accidentStart = 2s
-*.node[*].veinsmobility.accidentDuration = 3s
-*.node[*].appl.Accident_start = 2
+*.node[40].veinsmobility.accidentCount = 1
+*.node[40].veinsmobility.accidentStart = 25s
+*.node[40].veinsmobility.accidentDuration = 3s
+*.node[40].appl.Accident_start = 25
 
 
-sim-time-limit = 5s
+sim-time-limit = 30s
 
 [Config WithChSw-TrAD-WSMper]
 
@@ -203,13 +207,17 @@ sim-time-limit = 5s
 *.node[*].appl.TrAD_R = 366 
 
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconAtTime = 5s
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
+
 *.node[*].appl.Send_Per_WSM= true
+*.node[*].appl.sendWSA = true
+
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[*].veinsmobility.accidentStart = 2s
+*.node[*].veinsmobility.accidentStart = 7s
 *.node[*].veinsmobility.accidentDuration = 3s
 *.node[*].appl.Accident_start = 2
 
