Comenzar simulacion en otro punto de partida

--- a/src/networks/scenario1/omnetpp.ini
+++ b/src/networks/scenario1/omnetpp.ini
@@ -170,7 +170,7 @@ sim-time-limit = 10s
 *.node[*].appl.Slotted_Ns = 5
 *.node[*].appl.Slotted_R = 500 #40
 *.node[*].appl.Slotted_tau = 0.005#1.45
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval =0.5s# ${0.1s,0.5s}
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
