--- a/src/networks/scenario_stg1/omnetpp.ini
+++ b/src/networks/scenario_stg1/omnetpp.ini
@@ -175,28 +175,27 @@ sim-time-limit = 1000s
 [Config WithChSw-slotted-WSMper]
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_Ns = 7
+*.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
-*.node[*].appl.beaconAtTime = 5s
+#*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 24s
+*.manager.firstStepAt = 20s
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = true
-*.node[*].appl.sendWSA = true
+*.node[*].appl.sendWSA = false
 
-*.node[40].veinsmobility.accidentCount = 1
-*.node[40].veinsmobility.accidentStart = 25s
-*.node[40].veinsmobility.accidentDuration = 3s
-*.node[40].appl.Accident_start = 25
+*.node[455].veinsmobility.accidentCount = 1
+*.node[455].veinsmobility.accidentStart = 25s
+*.node[455].veinsmobility.accidentDuration = 3s
+*.node[*].appl.Accident_start = 25
 
-
-sim-time-limit = 30s
+sim-time-limit = 27s
 
 [Config WithChSw-TrAD-WSMper]
 
@@ -207,22 +206,24 @@ sim-time-limit = 30s
 *.node[*].appl.TrAD_R = 366 
 
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
-*.node[*].appl.beaconAtTime = 5s
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 20s
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM= true
-*.node[*].appl.sendWSA = true
+*.node[*].appl.sendWSA = false
 
 
-*.node[*].veinsmobility.accidentCount = 1
-*.node[*].veinsmobility.accidentStart = 7s
-*.node[*].veinsmobility.accidentDuration = 3s
-*.node[*].appl.Accident_start = 2
+*.node[455].veinsmobility.accidentCount = 1
+*.node[455].veinsmobility.accidentStart = 25s
+*.node[455].veinsmobility.accidentDuration = 3s
+*.node[*].appl.Accident_start = 25
 
 
-sim-time-limit = 5s
+sim-time-limit = 27s
 
 [Config WithChannelSwitching]
 *.**.nic.mac1609_4.useServiceChannel = true
