Escogiendo ROI en stgo1 y agregando LuST

--- a/src/networks/scenario_stg1/omnetpp.ini
+++ b/src/networks/scenario_stg1/omnetpp.ini
@@ -155,6 +155,7 @@ sim-time-limit = 1000s
 sim-time-limit = 1000s
 
 [Config WithoutChSw-WSA-TrAD-PerWSM]
+**.vector-recording = false
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
@@ -172,7 +173,8 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Accident_start = 700
 
-[Config WithChSw-slotted-WSMper]
+[Config WithChSw-slotted-WSM]
+**.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 7
@@ -182,25 +184,32 @@ sim-time-limit = 1000s
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 20s
+*.manager.firstStepAt = 800s
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
-*.node[*].appl.Send_Per_WSM = true
+*.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = false
 
-*.node[455].veinsmobility.accidentCount = 1
-*.node[455].veinsmobility.accidentStart = 25s
-*.node[455].veinsmobility.accidentDuration = 3s
-*.node[*].appl.Accident_start = 25
+*.node[173].veinsmobility.accidentCount = 1
+*.node[173].veinsmobility.accidentStart = 805s
+*.node[173].veinsmobility.accidentDuration = 5s
+*.node[173].appl.Accident_start = 805
 
-sim-time-limit = 27s
+sim-time-limit = 810s
 
-[Config WithChSw-TrAD-WSMper]
+repeat = 20
+#*.annotations.draw = true
+*.manager.roiRects = "1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+[Config WithChSw-TrAD-WSM]
+
+**.vector-recording = false
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
+
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
 *.node[*].appl.TrAD_R = 366 
@@ -208,24 +217,31 @@ sim-time-limit = 27s
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 20s
+*.manager.firstStepAt = 800s
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
-*.node[*].appl.Send_Per_WSM= true
+*.node[*].appl.Send_Per_WSM= false
 *.node[*].appl.sendWSA = false
 
 
-*.node[455].veinsmobility.accidentCount = 1
-*.node[455].veinsmobility.accidentStart = 25s
-*.node[455].veinsmobility.accidentDuration = 3s
-*.node[*].appl.Accident_start = 25
 
+*.node[173].veinsmobility.accidentCount = 1
+*.node[173].veinsmobility.accidentStart = 805s
+*.node[173].veinsmobility.accidentDuration = 5s
+*.node[173].appl.Accident_start = 805
 
-sim-time-limit = 27s
+*.manager.roiRects = "1217,481-1427,794"
+
+sim-time-limit = 810s
+
+repeat = 20
+
 
 [Config WithChannelSwitching]
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 *.rsu[*].appl.dataOnSch = true
+
+
