Simulaciones en ambiente altamente congestionado, anotacion sobre ejecución de SUMO por la terminal

--- a/src/networks/scenario_stg1/omnetpp.ini
+++ b/src/networks/scenario_stg1/omnetpp.ini
@@ -173,11 +173,11 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Accident_start = 700
 
-[Config WithChSw-slotted-WSM]
+[Config WithChSw-slotted-WSM_Ns5]
 **.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 7
+*.node[*].appl.Slotted_Ns = 5
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
@@ -244,4 +244,34 @@ repeat = 20
 *.node[*].appl.dataOnSch = true
 *.rsu[*].appl.dataOnSch = true
 
+
+[Config WithChSw-slotted-WSM-Autoclose]
+**.vector-recording = false
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+#*.manager.firstStepAt = 800s
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = false
+
+#*.node[173].veinsmobility.accidentCount = 1
+#*.node[173].veinsmobility.accidentStart = 805s
+#*.node[173].veinsmobility.accidentDuration = 5s
+#*.node[173].appl.Accident_start = 805
+
+sim-time-limit = 1s
+
+repeat = 4
+#*.annotations.draw = true
+#*.manager.roiRects = "1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
