Arreglando problema de accidente y ajustanto .ini

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -185,6 +185,8 @@ sim-time-limit = 1000s
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
@@ -196,12 +198,12 @@ sim-time-limit = 1000s
 *.node[100].veinsmobility.accidentStart = 305s
 *.node[100].veinsmobility.accidentDuration = 5s
 *.node[100].appl.Accident_start = 305
+*.node[100].appl.MeInAcc = true
 
 sim-time-limit = 310s
 
 #repeat = 20
 #*.annotations.draw = true
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 [Config WithChSw-TrAD-WSM]
 
@@ -218,6 +220,7 @@ sim-time-limit = 310s
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
@@ -232,7 +235,7 @@ sim-time-limit = 310s
 *.node[173].veinsmobility.accidentDuration = 5s
 *.node[173].appl.Accident_start = 305
 
-*.manager.roiRects = "1217,481-1427,794"
+
 
 sim-time-limit = 310s
 
@@ -256,7 +259,8 @@ sim-time-limit = 310s
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-#*.manager.firstStepAt = 800s
+*.manager.firstStepAt = 20s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
@@ -264,14 +268,17 @@ sim-time-limit = 310s
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = false
 
-#*.node[173].veinsmobility.accidentCount = 1
-#*.node[173].veinsmobility.accidentStart = 805s
-#*.node[173].veinsmobility.accidentDuration = 5s
-#*.node[173].appl.Accident_start = 805
+*.node[5].veinsmobility.accidentCount = 1
+*.node[5].veinsmobility.accidentStart = 26s
+*.node[5].veinsmobility.accidentDuration = 5s
+*.node[5].appl.Accident_start = 26
+*.node[5].appl.MeInAcc = true
 
-sim-time-limit = 1s
 
-repeat = 4
+
+sim-time-limit = 30s
+
+#repeat = 4
 #*.annotations.draw = true
 #*.manager.roiRects = "1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
