Configurando .ini para lanzar 3 configuraciones

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -181,7 +181,7 @@ sim-time-limit = 1000s
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
@@ -192,18 +192,49 @@ sim-time-limit = 1000s
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false
+*.node[*].appl.sendWSA = ${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[100].veinsmobility.accidentStart = 305s
-*.node[100].veinsmobility.accidentDuration = 5s
-*.node[100].appl.Accident_start = 305
-*.node[100].appl.MeInAcc = true
+*.node[63].veinsmobility.accidentStart = 305s
+*.node[63].veinsmobility.accidentDuration = 5s
+*.node[63].appl.Accident_start = 305
+*.node[63].appl.MeInAcc = true
 
 sim-time-limit = 310s
 
-#repeat = 20
-#*.annotations.draw = true
+repeat = 20
+
+[Config WithChSw-slotted-WSM_Ns7]
+**.vector-recording = false
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 300s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM = ${false,true}
+*.node[*].appl.sendWSA = false
+
+*.node[*].veinsmobility.accidentCount = 1
+*.node[63].veinsmobility.accidentStart = 305s
+*.node[63].veinsmobility.accidentDuration = 5s
+*.node[63].appl.Accident_start = 305
+*.node[63].appl.MeInAcc = true
+
+sim-time-limit = 310s
+
+repeat = 20
+
 
 [Config WithChSw-TrAD-WSM]
 
@@ -216,7 +247,7 @@ sim-time-limit = 310s
 *.node[*].appl.TrAD_Neig = 25
 *.node[*].appl.TrAD_R = 366 
 
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
@@ -226,20 +257,20 @@ sim-time-limit = 310s
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM= false
-*.node[*].appl.sendWSA = false
+*.node[*].appl.sendWSA = ${false,true}
 
 
 
-*.node[173].veinsmobility.accidentCount = 1
-*.node[173].veinsmobility.accidentStart = 305s
-*.node[173].veinsmobility.accidentDuration = 5s
-*.node[173].appl.Accident_start = 305
+*.node[63].veinsmobility.accidentCount = 1
+*.node[63].veinsmobility.accidentStart = 305s
+*.node[63].veinsmobility.accidentDuration = 5s
+*.node[63].appl.Accident_start = 305
 
 
 
 sim-time-limit = 310s
 
-#repeat = 20
+repeat = 20
 
 
 [Config WithChannelSwitching]
