Incluir configuración para otras densidades

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -278,8 +278,7 @@ repeat = 20
 *.node[*].appl.dataOnSch = true
 *.rsu[*].appl.dataOnSch = true
 
-
-[Config WithChSw-slotted-WSM-Autoclose]
+[Config WithChSw-slotted-WSM_Ns5_p1]
 **.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
@@ -290,26 +289,22 @@ repeat = 20
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 20s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
+*.manager.firstStepAt = 80s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false
+*.node[*].appl.sendWSA = false #${false,true}
 
-*.node[5].veinsmobility.accidentCount = 1
-*.node[5].veinsmobility.accidentStart = 26s
-*.node[5].veinsmobility.accidentDuration = 5s
-*.node[5].appl.Accident_start = 26
-*.node[5].appl.MeInAcc = true
+*.node[*].veinsmobility.accidentCount = 1
+*.node[17].veinsmobility.accidentStart = 85s
+*.node[17].veinsmobility.accidentDuration = 5s
+*.node[17].appl.Accident_start = 85
+*.node[17].appl.MeInAcc = true
 
+sim-time-limit = 90s
 
-
-sim-time-limit = 30s
-
-#repeat = 4
-#*.annotations.draw = true
-#*.manager.roiRects = "1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
-
+#repeat = 20
