corrigiendo doble reporte de posición y velocidad

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -286,7 +286,7 @@ repeat = 20
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 10s #0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 80s
@@ -308,3 +308,32 @@ repeat = 20
 sim-time-limit = 90s
 
 #repeat = 20
+
+[Config WithChSw-slotted-WSM_p2]
+**.vector-recording = false
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 80s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = false #${false,true}
+
+*.node[*].veinsmobility.accidentCount = 1
+*.node[17].veinsmobility.accidentStart = 85s
+*.node[17].veinsmobility.accidentDuration = 5s
+*.node[17].appl.Accident_start = 85
+*.node[17].appl.MeInAcc = true
+
+sim-time-limit = 90s
